@@ -1967,6 +1967,7 @@ AC_OUTPUT([
 	doc/doxygen/Makefile
 	doc/doxygen/doxygen-config.cfg
 	doc/doxygen/doxygen_filter.sh
+	tools/msvc/starpu_var.bat
 ])
 
 AC_MSG_NOTICE([
