@@ -29,7 +29,9 @@ EXTRA_DIST =				\
 	dev/rename.sed			\
 	dev/rename.sh			\
 	msvc/starpu_clean.bat		\
+	msvc/starpu_open.bat		\
 	msvc/starpu_exec.bat		\
+	msvc/starpu_var.bat		\
 	msvc/starpu.sln			\
 	msvc/starpu/starpu.vcxproj
 
@@ -114,7 +116,9 @@ if STARPU_HAVE_WINDOWS
 STARPU_MSVC_dir		 =	$(bindir)
 nobase_STARPU_MSVC__DATA =		\
 	msvc/starpu_clean.bat		\
+	msvc/starpu_open.bat		\
 	msvc/starpu_exec.bat		\
+	msvc/starpu_var.bat		\
 	msvc/starpu.sln			\
 	msvc/starpu/starpu.vcxproj
 endif
