@@ -15,45 +15,27 @@ REM MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 REM
 REM See the GNU Lesser General Public License in COPYING.LGPL for more details.
 
-TITLE MSVC StarPU Execution
+TITLE MSVC StarPU Environment
 ECHO.
-ECHO MSVC StarPU Execution
+ECHO MSVC StarPU Environment
+
+set STARPU_PATH=@prefix@
 
 IF NOT EXIST %STARPUPATH%\AUTHORS GOTO starpunotfound
 
 ECHO.
-ECHO Using StarPU in %STARPUPATH%
+ECHO Setting environment from %STARPUPATH%
 
-IF "%1" == "" GOTO invalidparam
-IF NOT EXIST %1 GOTO invalidparam
+set STARPU_LIBDIR=%STARPU_PATH%/lib
+set STARPU_INCLUDEDIR=%PREFIX%/include
+set STARPU_CFLAGS=/I%STARPU_INCLUDEDIR%\starpu\@STARPU_EFFECTIVE_VERSION@ @STARPU_CUDA_CPPFLAGS@
 
-mkdir starpu
-FOR %%F IN (%STARPUPATH%\bin\*dll) DO COPY %%F starpu\%%~nF
-FOR %%F IN (%STARPUPATH%\bin\*dll) DO COPY %%F starpu
-COPY c:\MinGW\bin\pthreadGC2.dll starpu
-COPY %STARPUPATH%\lib\libstarpu-1.2.lib starpu
-
-set OLDPATH=%PATH%
-call "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\vcvarsall.bat" x86
-echo cd starpu
-cl %1 /I%STARPUPATH%\include\starpu\1.2 /link starpu\libstarpu-1.2.lib
-
-set PATH=starpu;%PATH%
-.\%~n1.exe
-
-set PATH=%OLDPATH%
 GOTO end
-
-:invalidparam
-  ECHO.
-  ECHO Syntax error. You need to give the name of a StarPU application
-  EXIT /B 2
-  GOTO end
 
 :starpunotfound
   ECHO.
   ECHO You need to set the variable STARPUPATH to a valid StarPU installation directory
-  EXIT /B 1
+  exit /B 1
   GOTO end
 
 :end
