@@ -31,6 +31,8 @@ Small features:
   * New function starpu_perfmodel_directory() to print directory
     storing performance models. Available through the new option -d of
     the tool starpu_perfmodel_display
+  * New batch files to execute StarPU applications under Microsoft
+    Visual Studio (They are installed in path_to_starpu/bin/msvc)/
 
 Changes:
   * Modification of perfmodels output format for future improvements.
